--- a/package.json
+++ b/package.json
@@ -5,11 +5,44 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --env=jsdom --verbose"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
+    "msw": "^0.28.1",
     "next": "10.1.3",
+    "postcss": "^8.2.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.5",
+    "tailwindcss": "^2.0.4"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^7.30.3",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.1",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "jest-css-modules": "^2.1.0",
+    "typescript": "^4.2.3"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/.next/",
+      "<rootDir>/node_modules/"
+    ],
+    "moduleNameMapper": {
+      "\\.(css)$": "<rootDir>/node_modules/jest-css-modules"
+    }
   }
 }
