--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "msw": "^0.28.1",
     "next": "10.1.3",
+    "next-page-tester": "^0.24.1",
     "postcss": "^8.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
